--- a/.github/workflows/sync-ghost.yml
+++ b/.github/workflows/sync-ghost.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Get list of changed files
         id: files
         run: |
-          git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '\.md$' > changed_files.txt
+          echo "${{ github.event.head_commit.modified }}" | grep '\.md$' > changed_files.txt
 
       - name: Update Ghost CMS
         if: success()
